packages/astro/test/fixtures/errors/src/pages/vue-syntax-error.astro
---
import VueSyntaxError from '../components/VueSyntaxError.vue';
---

<div>
  <VueSyntaxError />
</div>
